# ss

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  ss.tmux
examples/: 00_intro.md  01_image_layout.md  02_syntax_walkthrough.md  README.md
scripts/: ss.tmux
src/: app.rs  images.rs  main.rs  markdown.rs  slides.rs  tmux.rs
src/deck/: loader.rs  mod.rs  model.rs
src/graphics/: mod.rs
src/layout/: mod.rs
src/markdown/: mod.rs
src/tmux/: mod.rs
