[package]
name = "ss"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.11"
pulldown-cmark = "0.13"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }

[dev-dependencies]
tempfile = "3.20"
